Fix more findbugs warnings.